[tool.poetry]
name = "ts2python"
version = "0.6.6"
description = "Python-Interoperability for Typescript-Interfaces"

license = "Apache-2.0"

authors = ["Eckhart Arnold <eckhart.arnold@posteo.de>"]

readme = "README.md"
repository = "https://github.com/jecki/ts2python"
homepage = "https://github.com/jecki/ts2python"

keywords = [
    'Typescript to Python converter',
    'Typescript Interface',
    'Python TypedDict',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Text Processing :: Markup',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Compilers'
]

packages = [
    { include = "ts2pythonParser.py" },
    { include = "ts2python" },
    { include = "demo" },
    { include = "tests_grammar", format = "sdist" },
    { include = "tests", format = "sdist" },
    { include = "docs", format = "sdist" }
]


[tool.poetry.dependencies]
python = "^3.7"
DHParser = { version = "~1.2", optional = false }
typing_extensions = { version = "^4.0", optional = true }

[tool.poetry.scripts]
ts2python = 'ts2pythonParser:main'

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
